# TIMS-Tevin-Type-C-Integration

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tims_tevin_typec_integration/: hooks.py  modules.txt
tims_tevin_typec_integration/fixtures/: custom_field.json
tims_tevin_typec_integration/tims_tevic_type_c_integration/doctype/end_of_day_tims_records/: end_of_day_tims_records.js  end_of_day_tims_records.json  end_of_day_tims_records.py  test_end_of_day_tims_records.py
tims_tevin_typec_integration/tims_tevic_type_c_integration/doctype/tims_settings/: test_tims_settings.py  tims_settings.js  tims_settings.json  tims_settings.py
tims_tevin_typec_integration/tims_tevic_type_c_integration/notification/notify_of_failed_tims_requests/: notify_of_failed_tims_requests.html  notify_of_failed_tims_requests.json
tims_tevin_typec_integration/tims_tevic_type_c_integration/overrides/client/: sales_invoice.js
tims_tevin_typec_integration/tims_tevic_type_c_integration/overrides/server/: delivery_note.py  sales_invoice.py  sales_order.py
tims_tevin_typec_integration/tims_tevic_type_c_integration/tasks/: tasks.py
